--- a/tac/main.css
+++ b/tac/main.css
@@ -11,12 +11,14 @@ h1 {
 	color: #fff;
 	font-size: 30px;
 	line-height: 34px;
+	border-bottom: 1px solid #555;
 }
 
 h2 {
 	color: #ddd;
 	font-size: 20px;
 	line-height: 25px;
+	border-bottom: 1px solid #555;
 }
 
 h3 {
