--- a/tac/main.css
+++ b/tac/main.css
@@ -12,6 +12,7 @@ h1 {
 	font-size: 30px;
 	line-height: 34px;
 	border-bottom: 1px solid #555;
+	padding: 10px 0 5px 0;
 }
 
 h2 {
@@ -19,6 +20,7 @@ h2 {
 	font-size: 20px;
 	line-height: 25px;
 	border-bottom: 1px solid #555;
+	padding: 10px 0 5px 0;
 }
 
 h3 {
