--- a/tac/main.css
+++ b/tac/main.css
@@ -1,5 +1,5 @@
 body {
-	font-family: sans-serif;
+	font-family: 'VT323', monospace, sans-serif;
 	line-height: 1.75em;
 	font-size: 20px;
 	background-color: #000;
