--- a/tac/main.css
+++ b/tac/main.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: Pixel;
+    src: url("./bpdots.squares-bold.otf") format("opentype");
+}
+
 body {
-	font-family: 'VT323', monospace, sans-serif;
+	font-family: 'Pixel', monospace, sans-serif;
 	line-height: 1.75em;
 	font-size: 28px;
 	background-color: #000;
