--- a/tac/main.css
+++ b/tac/main.css
@@ -16,16 +16,16 @@ h1 {
 	color: #fff;
 	font-size: 38px;
 	line-height: 34px;
-	border-bottom: 1px solid #555;
-	padding: 10px 0 5px 0;
+	border-bottom: 3px solid #555;
+	padding: 20px 0 10px 0;
 }
 
 h2 {
 	color: #ddd;
 	font-size: 32px;
 	line-height: 25px;
-	border-bottom: 1px solid #555;
-	padding: 10px 0 5px 0;
+	border-bottom: 3px solid #555;
+	padding: 20px 0 10px 0;
 }
 
 h3 {
@@ -35,8 +35,8 @@ h3 {
 }
 
 hr {
-	height: 1px;
-	background-color: #d8d8d8;
+	height: 3px;
+	background-color: #555;
 	border: none;
 	width: 100%;
 	margin: 0px;
